--- a/configs/svhn/resnet20/train/default.yml
+++ b/configs/svhn/resnet20/train/default.yml
@@ -53,7 +53,7 @@ model:
   conv_cfg:
     type: TeMPOBlockConv2d
     mode: "weight"
-    miniblock: [8, 8]
+    miniblock: [4, 4, 8, 8]
     w_bit: 32
     in_bit: 32
   # conv_cfg:
@@ -61,7 +61,7 @@ model:
   linear_cfg:
     type: TeMPOBlockLinear
     mode: "weight"
-    miniblock: [8, 8]
+    miniblock: [4, 4, 8, 8]
     w_bit: 32
     in_bit: 32
   # linear_cfg:
