--- a/configs/dst_test_config/train/sparse_train.yml
+++ b/configs/dst_test_config/train/sparse_train.yml
@@ -58,4 +58,4 @@ dst_scheduler:
   update_frequency: 1400
   T_max: 0.8
   density: 0.8
-  init_mode: row_power_efficient
+  init_mode: row_col_power_efficient
