--- a/configs/dst_test_config/train/sparse_train.yml
+++ b/configs/dst_test_config/train/sparse_train.yml
@@ -50,12 +50,12 @@ dst_scheduler:
   death_rate: 0.5
   growth_death_ratio: 1.0
   death_rate_decay: cosine
-  death_mode: magnitude
-  growth_mode: gradient
+  death_mode: col_only_magnitude
+  growth_mode: col_only_gradient
   redistribution_mode: null
   spe_initial: null
   pruning_type: structure
   update_frequency: 1400
   T_max: 0.8
   density: 0.8
-  init_mode: row_col_power_efficient
+  init_mode: col_power_efficient
