validate row_only, col_only, death and grow

--- a/configs/dst_test_config/train/sparse_train2.yml
+++ b/configs/dst_test_config/train/sparse_train2.yml
@@ -61,7 +61,7 @@ dst_scheduler:
   growth_death_ratio: 1.0
   death_rate_decay: cosine
   death_mode: magnitude_power_crosstalk
-  growth_mode: random
+  growth_mode: gradient_power_crosstalk
   redistribution_mode: null
   spe_initial: null
   pruning_type: structure_col
