--- a/configs/dst_test_config/train/sparse_train2.yml
+++ b/configs/dst_test_config/train/sparse_train2.yml
@@ -71,3 +71,4 @@ dst_scheduler:
   max_combinations: 100
   init_mode: uniform_power_crosstalk
   power_choice_margin: 2
+  node_spacing: [20, 100] # um, row, col spacing in weight matrix
