--- a/configs/dst_test_config/train/sparse_train2.yml
+++ b/configs/dst_test_config/train/sparse_train2.yml
@@ -32,6 +32,11 @@ noise:
   phase_noise_std: 0
   crosstalk_factor: 0.05
   random_state: 42
+  crosstalk_scheduler:
+    interv_h: 15
+    interv_v: 120
+    interv_s: 10
+  noise_flag: 0
 
 checkpoint:
   save_best_model_k: 3
