--- a/configs/fmnist/cnn/train/sparse_train.yml
+++ b/configs/fmnist/cnn/train/sparse_train.yml
@@ -50,12 +50,15 @@ dst_scheduler:
   death_rate: 0.5
   growth_death_ratio: 1.0
   death_rate_decay: cosine
-  death_mode: magnitude
-  growth_mode: gradient
+  death_mode: magnitude_power_crosstalk
+  growth_mode: gradient_power_crosstalk
   redistribution_mode: null
   spe_initial: null
-  pruning_type: unstructure
+  pruning_type: structure_col
   update_frequency: 1400
   T_max: 0.8
-  density: 0.8
-  init_mode: uniform
+  density: 0.5
+  max_combinations: 100
+  init_mode: uniform_power_crosstalk
+  power_choice_margin: 2
+  node_spacing: [20, 100] # um, row, col spacing in weight matrix
