--- a/configs/dst_test_config/train/sparse_train2.yml
+++ b/configs/dst_test_config/train/sparse_train2.yml
@@ -33,7 +33,7 @@ noise:
   crosstalk_factor: 0.05
   random_state: 42
   crosstalk_scheduler:
-    interv_h: 15
+    interv_h: 20
     interv_v: 120
     interv_s: 10
   noise_flag: 0
@@ -68,6 +68,7 @@ dst_scheduler:
   death_mode: magnitude_power_crosstalk
   growth_mode: gradient_power_crosstalk
   redistribution_mode: null
+  splitter_biases: 90
   spe_initial: null
   pruning_type: structure_row_col
   update_frequency: 1400
