--- a/configs/dst_test_config/train/sparse_train2.yml
+++ b/configs/dst_test_config/train/sparse_train2.yml
@@ -51,10 +51,10 @@ model:
     miniblock: [2, 2, 4, 4]
   linear_cfg:
     miniblock: [2, 2, 4, 4]
-  kernel_list: [16, 16, 16]
-  kernel_size_list: [1, 1, 1]
+  kernel_list: [64, 64, 64]
+  kernel_size_list: [3, 3, 3]
   hidden_list: []
-  stride_list: [1, 1, 1]
+  stride_list: [1, 2, 1]
   padding_list: [1, 1, 1]
   pool_out_size: 5
 
@@ -62,7 +62,7 @@ debug:
   verboise: 1
 
 dst_scheduler:
-  death_rate: 0.5
+  death_rate: 0.3
   growth_death_ratio: 1.0
   death_rate_decay: cosine
   death_mode: magnitude_power_crosstalk
@@ -70,10 +70,10 @@ dst_scheduler:
   redistribution_mode: null
   splitter_biases: 90
   spe_initial: null
-  pruning_type: structure_row_col
+  pruning_type: structure_col
   update_frequency: 1400
   T_max: 0.8
-  density: 0.5
+  density: 0.8
   max_combinations: 100
   init_mode: uniform_power_crosstalk
   power_choice_margin: 2
