--- a/configs/fmnist/cnn/train/sparse_train.yml
+++ b/configs/fmnist/cnn/train/sparse_train.yml
@@ -1,10 +1,15 @@
 criterion:
   name: ce
 
+# optimizer:
+#   name: prodigy
+#   lr: 1
+#   weight_decay: 0.01
+
 optimizer:
-  name: prodigy
-  lr: 1
-  weight_decay: 0.01
+  name: adam
+  lr: 0.002
+  weight_decay: 0.0001
 
 scheduler:
   name: cosine
@@ -13,7 +18,7 @@ scheduler:
 
 run:
   experiment: "fmnist_cnn_train"
-  n_epochs: 100
+  n_epochs: 50
   batch_size: 32
   use_cuda: 1
   gpu_id: 0
