--- a/configs/fmnist/cnn/train/sparse_train.yml
+++ b/configs/fmnist/cnn/train/sparse_train.yml
@@ -41,7 +41,8 @@ noise:
     interv_h: 20
     interv_v: 120
     interv_s: 10
-  noise_flag: 0
+  crosstalk_flag: False
+  noise_flag: False
 
 checkpoint:
   save_best_model_k: 3
