--- a/configs/fmnist/cnn/default.yml
+++ b/configs/fmnist/cnn/default.yml
@@ -54,6 +54,7 @@ quantize:
 noise:
   phase_bias: 0
   phase_noise_std: 0
+  output_noise_std: 0
   gamma_noise_std: 0
   crosstalk_factor: 0
   random_state: 42
