Co-authored-by: Jiaqi Gu <jqgu@utexas.edu>

--- a/configs/cifar10/vgg8/train/default.yml
+++ b/configs/cifar10/vgg8/train/default.yml
@@ -35,10 +35,21 @@ quantize:
 noise:
   phase_bias: 0
   phase_noise_std: 0
+  output_noise_std: 0
   gamma_noise_std: 0
   crosstalk_factor: 0
   random_state: 42
   weight_noise_std: 0.0
+  crosstalk_flag: False
+  noise_flag: False
+  light_redist: False
+  input_power_gating: False
+  input_modulation_ER: 6
+  output_power_gating: False
+  crosstalk_scheduler:
+    interv_h: 20
+    interv_v: 120
+    interv_s: 9
 
 checkpoint:
   save_best_model_k: 3
