--- a/configs/cifar10/resnet18/train/sparse_train.yml
+++ b/configs/cifar10/resnet18/train/sparse_train.yml
@@ -24,6 +24,21 @@ run:
   max_grad_value: 1
   do_distill: False
 
+noise:
+  phase_bias: 0
+  phase_noise_std: 0
+  gamma_noise_std: 0
+  crosstalk_factor: 0.05
+  output_noise_std: 0
+  random_state: 42
+  weight_noise_std: 0.0
+  crosstalk_flag: 0
+  noise_flag: 0
+  crosstalk_scheduler:
+    interv_h: 20
+    interv_v: 120
+    interv_s: 9
+
 quantize:
   weight_bit: 8
   input_bit: 8
