new settings, no weight decay on alpha

--- a/configs/cifar10/vgg8/train/default.yml
+++ b/configs/cifar10/vgg8/train/default.yml
@@ -61,22 +61,22 @@ checkpoint:
 
 model:
   name: "TeMPO_VGG8"
-  conv_cfg:
-    type: TeMPOBlockConv2d
-    mode: "weight"
-    miniblock: [4, 4, 8, 8]
-    w_bit: 32
-    in_bit: 32
   # conv_cfg:
-  #   type: Conv2d
-  linear_cfg:
-    type: TeMPOBlockLinear
-    mode: "weight"
-    miniblock: [4, 4, 8, 8]
-    w_bit: 32
-    in_bit: 32
+  #   type: TeMPOBlockConv2d
+  #   mode: "weight"
+  #   miniblock: [4, 4, 8, 8]
+  #   w_bit: 32
+  #   in_bit: 32
+  conv_cfg:
+    type: Conv2d
   # linear_cfg:
-  #   type: Linear
+  #   type: TeMPOBlockLinear
+  #   mode: "weight"
+  #   miniblock: [4, 4, 8, 8]
+  #   w_bit: 32
+  #   in_bit: 32
+  linear_cfg:
+    type: Linear
   norm_cfg:
     type: BN2d
     affine: True
