--- a/configs/cifar10/vgg8/train/sparse_train.yml
+++ b/configs/cifar10/vgg8/train/sparse_train.yml
@@ -1,6 +1,11 @@
 criterion:
   name: ce
 
+# optimizer:
+#   name: adam
+#   lr: 0.002
+#   weight_decay: 0.000
+
 optimizer:
   name: sgd
   lr: 0.02
@@ -10,10 +15,10 @@ optimizer:
 scheduler:
   name: cosine
   lr_gamma: 0.99
-  lr_min: 0.0
+  lr_min: 0.0000
 
 run:
-  experiment: "cifar10_resnet18_train"
+  experiment: "cifar10_vgg8_train"
   n_epochs: 200
   batch_size: 64
   use_cuda: 1
@@ -24,6 +29,12 @@ run:
   grad_clip: False
   max_grad_value: 1
   do_distill: False
+
+quantize:
+  weight_bit: 8
+  input_bit: 8
+
+loginfo: "logs.csv"
 
 noise:
   phase_bias: 0
@@ -38,26 +49,39 @@ noise:
   crosstalk_scheduler:
     interv_h: 20
     interv_v: 120
-    interv_s: 9
-
-quantize:
-  weight_bit: 8
-  input_bit: 8
-
-noise:
-  phase_noise_std: 0
-  crosstalk_factor: 0.05
-  random_state: 42
+    interv_s: 10
 
 checkpoint:
   save_best_model_k: 3
-  checkpoint_dir: "cifar10/resnet18/train"
+  checkpoint_dir: "cifar10/vgg8/train"
   model_comment: ""
   resume: 0
   restore_checkpoint : ""
 
 model:
-  name: "TeMPO_ResNet18"
+  name: "TeMPO_VGG8"
+  conv_cfg:
+    type: TeMPOBlockConv2d
+    mode: "weight"
+    miniblock: [1, 1, 16, 16]
+    w_bit: 8
+    in_bit: 6
+  # conv_cfg:
+  #   type: Conv2d
+  linear_cfg:
+    type: TeMPOBlockLinear
+    mode: "weight"
+    miniblock: [1, 1, 16, 16]
+    w_bit: 8
+    in_bit: 6
+  # linear_cfg:
+  #   type: Linear
+  norm_cfg:
+    type: BN2d
+    affine: True
+  act_cfg:
+    type: ReLU6
+    inplace: True
 
 debug:
   verboise: 1
@@ -70,8 +94,12 @@ dst_scheduler:
   growth_mode: gradient
   redistribution_mode: null
   spe_initial: null
-  pruning_type: unstructure
+  pruning_type: structure_col
   update_frequency: 1400
   T_max: 0.8
-  density: 0.8
+  density: 0.6
+  max_combinations: 100
   init_mode: uniform
+  power_choice_margin: 2
+  splitter_biases: 90
+  node_spacing: [20, 100] # um, row, col spacing in weight matrix
