--- a/configs/fmnist/cnn/train/train.yml
+++ b/configs/fmnist/cnn/train/train.yml
@@ -2,9 +2,10 @@ criterion:
   name: ce
 
 optimizer:
-  name: prodigy
-  lr: 1
-  weight_decay: 0.01
+  name: adamw
+  lr: 0.002
+  weight_decay: 0.0001
+  grad_clip_value: 1
 
 scheduler:
   name: cosine
@@ -13,7 +14,7 @@ scheduler:
 
 run:
   experiment: "fmnist_cnn_train"
-  n_epochs: 100
+  n_epochs: 50
   batch_size: 32
   use_cuda: 1
   gpu_id: 0
@@ -29,9 +30,20 @@ quantize:
   input_bit: 6
 
 noise:
+  phase_bias: 0
   phase_noise_std: 0
+  gamma_noise_std: 0
   crosstalk_factor: 0.05
+  output_noise_std: 0
   random_state: 42
+  weight_noise_std: 0.0
+  crosstalk_flag: 0
+  noise_flag: 0
+  crosstalk_scheduler:
+    interv_h: 20
+    interv_v: 120
+    interv_s: 9
+    ps_width: 6
 
 checkpoint:
   save_best_model_k: 3
@@ -42,7 +54,36 @@ checkpoint:
 
 model:
   name: "TeMPO_CNN"
+  conv_cfg:
+    type: TeMPOBlockConv2d
+    mode: "weight"
+    miniblock: [1, 1, 16, 16]
+    w_bit: 8
+    in_bit: 6
+  # conv_cfg:
+  #   type: Conv2d
+  linear_cfg:
+    type: TeMPOBlockLinear
+    mode: "weight"
+    miniblock: [1, 1, 16, 16]
+    w_bit: 8
+    in_bit: 6
+  # linear_cfg:
+  #   type: Linear
+  norm_cfg:
+    type: BN2d
+    affine: True
+  act_cfg:
+    type: ReLU
+    inplace: True
+  kernel_list: [64, 64, 64]
+  kernel_size_list: [3, 3, 3]
+  hidden_list: []
+  stride_list: [1, 2, 1]
+  padding_list: [1, 1, 1]
+  pool_out_size: 5
 
 debug:
   verboise: 1
 
+dst_scheduler: None
