--- a/configs/cifar100/resnet18/train/sparse_train.yml
+++ b/configs/cifar100/resnet18/train/sparse_train.yml
@@ -95,10 +95,13 @@ dst_scheduler:
   growth_mode: gradient
   redistribution_mode: null
   spe_initial: null
+  skip_first_layer: True
+  skip_last_layer: True
   pruning_type: structure_col
   update_frequency: 1400
   T_max: 0.8
   density: 0.6
+  keep_same: False
   max_combinations: 100
   init_mode: uniform
   power_choice_margin: 2
